--- a/src/styles/components/call_summary.scss
+++ b/src/styles/components/call_summary.scss
@@ -1,3 +1,7 @@
+.call-summary-wrapper {
+  overflow: auto;
+}
+
 .call-summary {
   color: $hr-light-gray;
   background-color: #fafafa;
@@ -22,10 +26,7 @@
   }
 
   &__cell-wrapper--inner {
-    position: absolute;
-    width: 100%;
     white-space: nowrap;
-    overflow-x: auto;
   }
 
   &__url {
