--- a/src/styles/components/call_summary.scss
+++ b/src/styles/components/call_summary.scss
@@ -1,21 +1,21 @@
-.call-summary-wrapper {
-  overflow: auto;
-}
-
 .call-summary {
-  color: $hr-light-gray;
-  background-color: #fafafa;
+  overflow: auto;
 
-  tr {
+  &__table {
+    color: $hr-light-gray;
+    background-color: #fafafa;
+  }
+
+  &__row {
     vertical-align: middle;
-    height: 3rem;
+    height: 2rem;
 
     &:nth-child(even) {
       background: none;
     }
   }
 
-  td:first-of-type {
+  &__cell:first-of-type {
     width: 33%;
   }
 
@@ -32,7 +32,6 @@
   &__url {
     color: $hr-green;
     font-weight: 500;
-    line-height: 3;
   }
 
   &__extra {
