--- a/src/styles/components/toast.scss
+++ b/src/styles/components/toast.scss
@@ -1,9 +1,9 @@
 .toast-list {
-  top: 20px;
-  right: 20px;
+  top: 1.25rem;
+  right: 1.25rem;
   z-index: 9999;
   position: fixed;
-  padding: 4px;
+  padding: 0.25rem;
   box-sizing: border-box;
   color: #fff;
 }
@@ -18,16 +18,16 @@
 }
 
 .toast {
-  width: 380px;
-  padding: 20px;
+  width: 25rem;
+  padding: 1.25rem;
   border-radius: 3px;
   background-color: $hr-light-gray;
   display: flex;
   color: #ffffff;
-  font-size: 14px;
+  font-size: 0.875rem;
   position: relative;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-  margin-bottom: 15px;
+  margin-bottom: 1rem;
   overflow: hidden;
   animation: fade-in 300ms;
 
@@ -40,11 +40,11 @@
   }
 
   &__icon {
-    flex: 0 0 40px;
+    flex: 0 0 2.5rem;
     display: flex;
     justify-content: center;
-    margin-right: 20px;
-    font-size: 40px;
+    margin-right: 1.25rem;
+    font-size: 2.5rem;
     align-items: center;
   }
 
@@ -55,25 +55,25 @@
   &__title {
     display: block;
     font-weight: 500;
-    line-height: 28px;
-    margin-bottom: 5px;
-    font-size: 18px;
+    line-height: 1.75rem;
+    margin-bottom: 0.3125rem;
+    font-size: 1.125rem;
   }
 
   &__description {
     margin: 0;
     padding: 0;
     font-weight: 400;
-    line-height: 21px;
+    line-height: 1.3125rem;
   }
 
   &__close-button {
     position: absolute;
-    top: 14px;
-    right: 14px;
-    padding: 4px;
+    top: 1rem;
+    right: 1rem;
+    padding: 0.25rem;
     text-align: center;
-    font-size: 18px;
+    font-size: 1.125rem;
     cursor: pointer;
   }
 }
