--- a/src/styles/components/form.scss
+++ b/src/styles/components/form.scss
@@ -53,7 +53,7 @@
 
   &__textarea {
     width: 100%;
-    height: 100px;
+    height: 14rem;
     resize: none;
     border: 1px solid #f2f2f2;
     box-shadow: none;
