--- a/src/styles/components/toast.scss
+++ b/src/styles/components/toast.scss
@@ -1,13 +1,3 @@
-.toast-list {
-  top: 1.25rem;
-  right: 1.25rem;
-  z-index: 9999;
-  position: fixed;
-  padding: 0.25rem;
-  box-sizing: border-box;
-  color: #fff;
-}
-
 @keyframes fade-in {
   from {
     opacity: 0;
@@ -18,24 +8,34 @@
 }
 
 .toast {
-  width: 25rem;
-  padding: 1.25rem;
-  border-radius: 3px;
-  background-color: $hr-light-gray;
-  display: flex;
-  color: #ffffff;
-  font-size: 0.875rem;
-  position: relative;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-  margin-bottom: 1rem;
-  overflow: hidden;
-  animation: fade-in 300ms;
+  top: 1.25rem;
+  right: 1.25rem;
+  z-index: 9999;
+  position: fixed;
+  padding: 0.25rem;
+  box-sizing: border-box;
+  color: #fff;
 
-  &.success {
+  &__inner {
+    width: 25rem;
+    padding: 1.25rem;
+    border-radius: 3px;
+    background-color: $hr-light-gray;
+    display: flex;
+    color: #ffffff;
+    font-size: 0.875rem;
+    position: relative;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+    margin-bottom: 1rem;
+    overflow: hidden;
+    animation: fade-in 300ms;
+  }
+
+  &__inner.success {
     background-color: $hr-green;
   }
 
-  &.error {
+  &__inner.error {
     background-color: red;
   }
 
