--- a/src/styles/components/documentation.scss
+++ b/src/styles/components/documentation.scss
@@ -102,6 +102,11 @@
     overflow: auto;
   }
 
+  ol {
+    margin-left: 0;
+    padding-left: 1.25rem;
+  }
+
   li {
     font-size: 1rem;
     font-weight: 400;
