--- a/src/styles/components/section.scss
+++ b/src/styles/components/section.scss
@@ -180,6 +180,10 @@
         padding: 0;
       }
     }
+
+    .section__sidebar_desktop {
+      padding-bottom: 0;
+    }
   }
 
   &__sidebar {
@@ -196,6 +200,8 @@
 
   &__sidebar-in-wrapper {
     min-height: 54px;
+    max-height: 100%;
+    overflow-y: auto;
   }
 
   &__sidebar-in {
